chore: change path to avoid runtime warning of public folder path

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/wrench-screwdriver.svg" />
+    <!-- files in the 'public' folder are served at root-level at runtime via vite -->
+    <link rel="icon" type="image/svg+xml" href="./wrench-screwdriver.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simon Sörqvist - Developer</title>
   </head>
