fix: temp. favicon path caused duplicates in build files
favicon path cause the build process to include 2 copies of the .svg file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- files in the 'public' folder are served at root-level at runtime via vite -->
-    <link rel="icon" type="image/svg+xml" href="./wrench-screwdriver.svg" />
+    <link rel="icon" type="image/svg+xml" href="/wrench-screwdriver.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simon Sörqvist - Developer</title>
   </head>
