feat: add metadata for social sharing

--- a/index.html
+++ b/index.html
@@ -2,11 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- files in the 'public' folder are served at root-level at runtime via vite -->
     <link rel="icon" type="image/svg+xml" href="/wrench-screwdriver.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- HTML Meta Tags -->
     <title>Simon Sörqvist - Developer</title>
+    <meta name="author" content="Simon Sörqvist" />
+    <meta
+      name="description"
+      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in 
+      C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
+      I create applications and webapps with easy-to-use user interfaces."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://simonsorqv.ist/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Simon Sörqvist - Developer" />
+    <meta
+      property="og:description"
+      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in 
+      C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
+      I create applications and webapps with easy-to-use user interfaces."
+    />
+    <meta property="og:image" content="/screen-with-fraction-tag.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="simonsorqv.ist" />
+    <meta property="twitter:url" content="https://simonsorqv.ist/" />
+    <meta name="twitter:title" content="Simon Sörqvist - Developer" />
+    <meta
+      name="twitter:description"
+      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in 
+      C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
+      I create applications and webapps with easy-to-use user interfaces."
+    />
+    <meta name="twitter:image" content="/screen-with-fraction-tag.png" />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
