fix: metadata image link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
       I create applications and webapps with easy-to-use user interfaces."
     />
-    <meta property="og:image" content="/screen-with-fraction-tag.png" />
+    <meta
+      property="og:image"
+      content="https://opengraph.b-cdn.net/production/images/798383c7-ba6c-4ba6-8370-45e3287cf72c.png?token=I8ABtOcbtcBhSZBgrEesCYp5l-Vh2GE-AFKuqP2IezI&height=360&width=640&expires=33277476213"
+    />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -40,7 +43,10 @@
       C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
       I create applications and webapps with easy-to-use user interfaces."
     />
-    <meta name="twitter:image" content="/screen-with-fraction-tag.png" />
+    <meta
+      name="twitter:image"
+      content="https://opengraph.b-cdn.net/production/images/798383c7-ba6c-4ba6-8370-45e3287cf72c.png?token=I8ABtOcbtcBhSZBgrEesCYp5l-Vh2GE-AFKuqP2IezI&height=360&width=640&expires=33277476213"
+    />
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
