--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
 
-  <body>
+  <body class="bg-primary">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
