style: set primary text color
both background & text color are now 'opt-out' by design

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
 
-  <body class="bg-primary">
+  <body class="bg-primary text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
