style: add grainy background

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
 
-  <body class="font-source-code-pro bg-primary text-white">
+  <body class="font-source-code-pro bg-primary text-white bg-[url(/grain.svg)]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
