--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <meta name="author" content="Simon Sörqvist" />
     <meta
       name="description"
-      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in 
-      C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
-      I create applications and webapps with easy-to-use user interfaces."
+      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, I create applications and webapps with easy-to-use user interfaces."
     />
 
     <!-- Facebook Meta Tags -->
@@ -23,9 +21,7 @@
     <meta property="og:title" content="Simon Sörqvist - Developer" />
     <meta
       property="og:description"
-      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in 
-      C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
-      I create applications and webapps with easy-to-use user interfaces."
+      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, I create applications and webapps with easy-to-use user interfaces."
     />
     <meta
       property="og:image"
@@ -39,9 +35,7 @@
     <meta name="twitter:title" content="Simon Sörqvist - Developer" />
     <meta
       name="twitter:description"
-      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in 
-      C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, 
-      I create applications and webapps with easy-to-use user interfaces."
+      content="Welcome to my portfolio! I’m Simon, a skilled fullstack developer specializing in C#, ASP.NET, EF Core, React.js & TypeScript. With a keen eye for detail and a love for clean code, I create applications and webapps with easy-to-use user interfaces."
     />
     <meta
       name="twitter:image"
